yamls/pod-with-node-antiaffinity.yaml
#kubectl label nodes node01 disktype=ssd
 
apiVersion: v1
kind: Pod
metadata:
  name: antinginx
spec:
  affinity:
    nodeAffinity:
      requiredDuringSchedulingIgnoredDuringExecution:
        nodeSelectorTerms:
        - matchExpressions:
          - key: disktype
            operator: NotIn
            values:
            - ssd            
  containers:
  - name: nginx
    image: nginx
    imagePullPolicy: IfNotPresent
