yamls/taint-toleration2.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-sdd
  labels: 
    env: test
spec:
  containers:
  - name: nginx-hdd
    image: nginx
    imagePullPolicy: IfNotPresent
  tolerations:
  - key: "storage"
    operator: "Equal"
    value: "ssd"
    effect: "NoSchedule"
